--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,16 +19,35 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  intl: 0.15.8
+  dio: ^3.0.3
+  dio_cookie_manager: ^1.0.0
+  provider: ^3.0.0+1
+  image_picker: ^0.6.0+20
+  geolocator: ^5.1.1+1
+  camera: ^0.5.2+2
+  video_player: ^0.10.1+6
+  webview_flutter: ^0.3.10+4
+  simple_rsa: ^0.0.5
+  shared_preferences: ^0.5.1+1
+  cached_network_image: ^0.8.0
+  fluttertoast: ^3.0.3
+  flukit: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
+  json_model: ^0.0.2
+  intl_translation: ^0.17.4
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
