--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,13 @@ flutter:
   uses-material-design: true
   assets:
     - assets/avatar-default.png
+  fonts:
+    - family: wxcIconFont
+      fonts:
+        - asset: static/font/iconfont.ttf
+    - family: google_kavivanar
+      fonts:
+        - asset: static/font/google_kavivanar.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
