--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/avatar-default.png
+    - static/images/
+    - static/file/
   fonts:
     - family: wxcIconFont
       fonts:
