行政页面的添加

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,13 +62,14 @@ flutter:
   uses-material-design: true
   assets:
     - assets/avatar-default.png
+    - assets/icon_leave.png
   fonts:
     - family: wxcIconFont
       fonts:
-        - asset: static/font/iconfont.ttf
+        #- asset: static/font/iconfont.ttf
     - family: google_kavivanar
       fonts:
-        - asset: static/font/google_kavivanar.ttf
+      #- asset: static/font/google_kavivanar.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
