--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/avatar-default.png
+    - assets/icon_right.png
     - static/images/
     - static/file/
     - assets/icon_leave.png
