--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   fluttertoast: ^3.0.3
   flukit: ^1.0.2
   flutter_refresh: ^0.0.2
+  flutter_swiper: ^1.1.6
+  #flutter_webview_plugin: ^0.3.11
+  pull_to_refresh: ^1.5.8
 
 dev_dependencies:
   flutter_test:
