--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ dependencies:
   dio: ^3.0.3
   dio_cookie_manager: ^1.0.0
   provider: ^3.0.0+1
-  image_picker: ^0.6.0+20
+  image_picker: ^0.6.5+1
   geolocator: ^5.1.1+1
-  camera: ^0.5.2+2
+  camera: ^0.5.7+4
   video_player: ^0.10.8+1
   webview_flutter: ^0.3.10+4
   simple_rsa: ^0.0.5
@@ -45,6 +45,8 @@ dependencies:
   #flutter_webview_plugin: ^0.3.11
   pull_to_refresh: ^1.5.8
   flutter_screenutil: ^0.5.3 #屏幕适配
+  multi_image_picker: ^4.6.7 #多图选择
+
 
 dev_dependencies:
   flutter_test:
