--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  intl: 0.16.0
+  intl: 0.16.1
   dio: ^3.0.3
   dio_cookie_manager: ^1.0.0
   provider: ^3.0.0+1
@@ -46,7 +46,7 @@ dependencies:
   pull_to_refresh: ^1.5.8
   flutter_screenutil: ^0.5.3 #屏幕适配
   multi_image_picker: ^4.6.7 #多图选择
-
+  qr_code_scanner: ^0.0.13
 
 dev_dependencies:
   flutter_test:
