--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_screenutil: ^0.5.3 #屏幕适配
   multi_image_picker: ^4.6.7 #多图选择
   qr_code_scanner: ^0.0.13
+  flutter_hooks: ^0.13.0
 
 dev_dependencies:
   flutter_test:
